RESOLVED FIXED65205
Apply r40940 to WebKit2 to work around a Silverlight crash
https://bugs.webkit.org/show_bug.cgi?id=65205
Summary Apply r40940 to WebKit2 to work around a Silverlight crash
Tim Horton
Reported 2011-07-26 13:47:06 PDT
The crash mentioned in http://trac.webkit.org/changeset/40940 returned with the switch to WebKit2, because the added workaround was not preserved. <rdar://problem/9058370> Patch to re-add it coming shortly.
Attachments
patch (4.29 KB, patch)
2011-07-26 13:53 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2011-07-26 13:53:31 PDT
WebKit Review Bot
Comment 2 2011-07-26 15:08:41 PDT
Comment on attachment 102048 [details] patch Clearing flags on attachment: 102048 Committed r91793: <http://trac.webkit.org/changeset/91793>
WebKit Review Bot
Comment 3 2011-07-26 15:08:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.