Apply r40940 to WebKit2 to work around a Silverlight crash. https://bugs.webkit.org/show_bug.cgi?id=65205 <rdar://problem/9058370>

Patch by Tim Horton <timothy_horton@apple.com> on 2011-07-26
Reviewed by Anders Carlsson.

* Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm:
(WebKit::NetscapePluginModule::determineQuirks):
* Shared/Plugins/PluginQuirks.h:
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::userAgent):

Canonical link: https://commits.webkit.org/80960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91793 268f45cc-cd09-0410-ab3c-d52691b4dbfc